new site new soup

--- a/ncaa.ipynb
+++ b/ncaa.ipynb
@@ -27,6 +27,7 @@
     "\n",
     "def genBrackData():\n",
     "    bracket = []\n",
+    "    #1985 is the first year of 64 teams\n",
     "    years = range(2010, 1938, -1)\n",
     "    for year in years: \n",
     "        soup = getPageData(year)\n",
