updates to work for 1985 till now 64 plus team brackets

--- a/ncaa_all_years.ipynb
+++ b/ncaa_all_years.ipynb
@@ -30,21 +30,51 @@
    "source": [
     "from urllib.request import urlopen\n",
     "from bs4 import BeautifulSoup\n",
+    "from bs4 import element\n",
     "from time import sleep\n",
     "import pandas as pd\n",
-    "import re\n",
     "\n",
-    "def getPageData(year):\n",
+    "\n",
+    "def get_page_data(year):\n",
     "    url = 'http://www.sports-reference.com/cbb/postseason/'+str(year)+'-ncaa.html'\n",
     "    page = urlopen(url)\n",
     "    return BeautifulSoup(page, 'html.parser')\n",
     "\n",
-    "soup = getPageData(2016)\n",
-    "east_region_html = soup.select(\"div#east div#bracket div:nth-child(1)\")\n",
-    "len(east_region_html)\n",
-    "for div in east_region_html:\n",
-    "    print(div)\n",
-    "    print()\n"
+    "def tidy_location(locStr):\n",
+    "    if locStr.startswith('at '):\n",
+    "        return locStr[len('at '):]\n",
+    "\n",
+    "def get_bracket():    \n",
+    "    years = range(2017, 1985, -1)\n",
+    "    #TODO fix years earlier than 1985\n",
+    "    bracket = []\n",
+    "    for year in years: \n",
+    "        soup = get_page_data(year)\n",
+    "        region_tags = soup.find_all(\"div\", attrs={\"data-controls\": \"#brackets\"})[0].select('div a')        \n",
+    "        for region_tag in region_tags:        \n",
+    "            region = str(region_tag.string).lower()\n",
+    "            if region is not 'final four':            \n",
+    "                search = {'id': region}        \n",
+    "                region_div = soup.find('div',**search)\n",
+    "                if region_div is not None:\n",
+    "                    region_first_round = region_div.div.div                \n",
+    "                    for elem in region_first_round.contents:\n",
+    "                        if isinstance(elem, element.Tag ):\n",
+    "                            seeds_loc = elem.find_all('span')\n",
+    "                            #if len(seeds_loc) == 2:\n",
+    "                            seed1 = seeds_loc[0].string\n",
+    "                            seed2 = seeds_loc[1].string\n",
+    "                            currLoc = tidy_location(seeds_loc[2].string)        \n",
+    "                            alist = elem.select('div a')\n",
+    "                            team1 = alist[0].string\n",
+    "                            team2 = alist[2].string        \n",
+    "                            bracketRow = [year, region, seed1, team1, currLoc, seed2, team2]\n",
+    "                            bracket.append(bracketRow) \n",
+    "        sleep(0.5)\n",
+    "    return pd.DataFrame(bracket, columns=['Year', 'Region', 'Seed', 'Team Name','Location', 'Oppenent Seed', 'Opponent']) \n",
+    "\n",
+    "df = get_bracket()\n",
+    "df"
    ]
   },
   {
