--- a/ncaa_all_years.ipynb
+++ b/ncaa_all_years.ipynb
@@ -847,24 +847,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 67,
    "metadata": {
     "collapsed": false,
     "scrolled": false
    },
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[<a>East</a>, <a>Midwest</a>, <a>Southeast</a>, <a>West</a>, <a>Final Four</a>]\n",
-      "region  east\n",
-      "region  midwest\n",
-      "region  southeast\n",
-      "region  west\n",
-      "region  final four\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -1246,40 +1234,16 @@
        "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>30</th>\n",
-       "      <td>1985</td>\n",
-       "      <td>southeast</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Michigan</td>\n",
-       "      <td>Dayton, OH</td>\n",
-       "      <td>16</td>\n",
-       "      <td>Fairleigh Dickinson</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>31</th>\n",
-       "      <td>1985</td>\n",
-       "      <td>southeast</td>\n",
-       "      <td>1</td>\n",
-       "      <td>8</td>\n",
-       "      <td>Villanova</td>\n",
-       "      <td>Dayton, OH</td>\n",
-       "      <td>9</td>\n",
-       "      <td>Dayton</td>\n",
-       "      <td>8</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>32</th>\n",
-       "      <td>1985</td>\n",
-       "      <td>southeast</td>\n",
-       "      <td>1</td>\n",
-       "      <td>5</td>\n",
-       "      <td>Maryland</td>\n",
-       "      <td>Dayton, OH</td>\n",
-       "      <td>12</td>\n",
-       "      <td>Miami (OH)</td>\n",
-       "      <td>5</td>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>33</th>\n",
@@ -1605,72 +1569,110 @@
        "      <td>North Carolina State</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>60</th>\n",
+       "      <td>1985</td>\n",
+       "      <td>final four</td>\n",
+       "      <td>1</td>\n",
+       "      <td>8</td>\n",
+       "      <td>Villanova</td>\n",
+       "      <td>Lexington, KY</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Memphis</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>61</th>\n",
+       "      <td>1985</td>\n",
+       "      <td>final four</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>St. John's (NY)</td>\n",
+       "      <td>Lexington, KY</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Georgetown</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>62</th>\n",
+       "      <td>1985</td>\n",
+       "      <td>final four</td>\n",
+       "      <td>2</td>\n",
+       "      <td>8</td>\n",
+       "      <td>Villanova</td>\n",
+       "      <td>Lexington, KY</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Georgetown</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>63 rows × 9 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "    Year     Region  Round Seed             Team Name            Location  \\\n",
-       "0   1985       east      1    1            Georgetown        Hartford, CT   \n",
-       "1   1985       east      1    8                Temple        Hartford, CT   \n",
-       "2   1985       east      1    5                   SMU        Hartford, CT   \n",
-       "3   1985       east      1    4           Loyola (IL)        Hartford, CT   \n",
-       "4   1985       east      1    6               Georgia         Atlanta, GA   \n",
-       "5   1985       east      1    3              Illinois         Atlanta, GA   \n",
-       "6   1985       east      1    7              Syracuse         Atlanta, GA   \n",
-       "7   1985       east      1    2          Georgia Tech         Atlanta, GA   \n",
-       "8   1985       east      2    1            Georgetown        Hartford, CT   \n",
-       "9   1985       east      2    5                   SMU        Hartford, CT   \n",
-       "10  1985       east      2    6               Georgia         Atlanta, GA   \n",
-       "11  1985       east      2    7              Syracuse         Atlanta, GA   \n",
-       "12  1985       east      3    1            Georgetown      Providence, RI   \n",
-       "13  1985       east      3    3              Illinois      Providence, RI   \n",
-       "14  1985       east      4    1            Georgetown      Providence, RI   \n",
-       "15  1985    midwest      1    1              Oklahoma           Tulsa, OK   \n",
-       "16  1985    midwest      1    8                   USC           Tulsa, OK   \n",
-       "17  1985    midwest      1    5        Louisiana Tech           Tulsa, OK   \n",
-       "18  1985    midwest      1    4            Ohio State           Tulsa, OK   \n",
-       "19  1985    midwest      1    6            Texas Tech         Houston, TX   \n",
-       "20  1985    midwest      1    3                  Duke         Houston, TX   \n",
-       "21  1985    midwest      1    7    Alabama-Birmingham         Houston, TX   \n",
-       "22  1985    midwest      1    2               Memphis         Houston, TX   \n",
-       "23  1985    midwest      2    1              Oklahoma           Tulsa, OK   \n",
-       "24  1985    midwest      2    5        Louisiana Tech           Tulsa, OK   \n",
-       "25  1985    midwest      2   11        Boston College         Houston, TX   \n",
-       "26  1985    midwest      2    7    Alabama-Birmingham         Houston, TX   \n",
-       "27  1985    midwest      3    1              Oklahoma          Dallas, TX   \n",
-       "28  1985    midwest      3   11        Boston College          Dallas, TX   \n",
-       "29  1985    midwest      4    1              Oklahoma          Dallas, TX   \n",
-       "30  1985  southeast      1    1              Michigan          Dayton, OH   \n",
-       "31  1985  southeast      1    8             Villanova          Dayton, OH   \n",
-       "32  1985  southeast      1    5              Maryland          Dayton, OH   \n",
-       "33  1985  southeast      1    4                   LSU          Dayton, OH   \n",
-       "34  1985  southeast      1    6                Purdue      South Bend, IN   \n",
-       "35  1985  southeast      1    3                Kansas      South Bend, IN   \n",
-       "36  1985  southeast      1    7            Notre Dame      South Bend, IN   \n",
-       "37  1985  southeast      1    2                   UNC      South Bend, IN   \n",
-       "38  1985  southeast      2    1              Michigan          Dayton, OH   \n",
-       "39  1985  southeast      2    5              Maryland          Dayton, OH   \n",
-       "40  1985  southeast      2   11                Auburn      South Bend, IN   \n",
-       "41  1985  southeast      2    7            Notre Dame      South Bend, IN   \n",
-       "42  1985  southeast      3    8             Villanova      Birmingham, AL   \n",
-       "43  1985  southeast      3   11                Auburn      Birmingham, AL   \n",
-       "44  1985  southeast      4    8             Villanova      Birmingham, AL   \n",
-       "45  1985       west      1    1       St. John's (NY)  Salt Lake City, UT   \n",
-       "46  1985       west      1    8                  Iowa  Salt Lake City, UT   \n",
-       "47  1985       west      1    5            Washington  Salt Lake City, UT   \n",
-       "48  1985       west      1    4                  UNLV  Salt Lake City, UT   \n",
-       "49  1985       west      1    6                 Tulsa     Albuquerque, NM   \n",
-       "50  1985       west      1    3  North Carolina State     Albuquerque, NM   \n",
-       "51  1985       west      1    7               Alabama     Albuquerque, NM   \n",
-       "52  1985       west      1    2                   VCU     Albuquerque, NM   \n",
-       "53  1985       west      2    1       St. John's (NY)  Salt Lake City, UT   \n",
-       "54  1985       west      2   12              Kentucky  Salt Lake City, UT   \n",
-       "55  1985       west      2   11                  UTEP     Albuquerque, NM   \n",
-       "56  1985       west      2    7               Alabama     Albuquerque, NM   \n",
-       "57  1985       west      3    1       St. John's (NY)          Denver, CO   \n",
-       "58  1985       west      3    3  North Carolina State          Denver, CO   \n",
-       "59  1985       west      4    1       St. John's (NY)          Denver, CO   \n",
+       "    Year      Region  Round Seed             Team Name            Location  \\\n",
+       "0   1985        east      1    1            Georgetown        Hartford, CT   \n",
+       "1   1985        east      1    8                Temple        Hartford, CT   \n",
+       "2   1985        east      1    5                   SMU        Hartford, CT   \n",
+       "3   1985        east      1    4           Loyola (IL)        Hartford, CT   \n",
+       "4   1985        east      1    6               Georgia         Atlanta, GA   \n",
+       "5   1985        east      1    3              Illinois         Atlanta, GA   \n",
+       "6   1985        east      1    7              Syracuse         Atlanta, GA   \n",
+       "7   1985        east      1    2          Georgia Tech         Atlanta, GA   \n",
+       "8   1985        east      2    1            Georgetown        Hartford, CT   \n",
+       "9   1985        east      2    5                   SMU        Hartford, CT   \n",
+       "10  1985        east      2    6               Georgia         Atlanta, GA   \n",
+       "11  1985        east      2    7              Syracuse         Atlanta, GA   \n",
+       "12  1985        east      3    1            Georgetown      Providence, RI   \n",
+       "13  1985        east      3    3              Illinois      Providence, RI   \n",
+       "14  1985        east      4    1            Georgetown      Providence, RI   \n",
+       "15  1985     midwest      1    1              Oklahoma           Tulsa, OK   \n",
+       "16  1985     midwest      1    8                   USC           Tulsa, OK   \n",
+       "17  1985     midwest      1    5        Louisiana Tech           Tulsa, OK   \n",
+       "18  1985     midwest      1    4            Ohio State           Tulsa, OK   \n",
+       "19  1985     midwest      1    6            Texas Tech         Houston, TX   \n",
+       "20  1985     midwest      1    3                  Duke         Houston, TX   \n",
+       "21  1985     midwest      1    7    Alabama-Birmingham         Houston, TX   \n",
+       "22  1985     midwest      1    2               Memphis         Houston, TX   \n",
+       "23  1985     midwest      2    1              Oklahoma           Tulsa, OK   \n",
+       "24  1985     midwest      2    5        Louisiana Tech           Tulsa, OK   \n",
+       "25  1985     midwest      2   11        Boston College         Houston, TX   \n",
+       "26  1985     midwest      2    7    Alabama-Birmingham         Houston, TX   \n",
+       "27  1985     midwest      3    1              Oklahoma          Dallas, TX   \n",
+       "28  1985     midwest      3   11        Boston College          Dallas, TX   \n",
+       "29  1985     midwest      4    1              Oklahoma          Dallas, TX   \n",
+       "..   ...         ...    ...  ...                   ...                 ...   \n",
+       "33  1985   southeast      1    4                   LSU          Dayton, OH   \n",
+       "34  1985   southeast      1    6                Purdue      South Bend, IN   \n",
+       "35  1985   southeast      1    3                Kansas      South Bend, IN   \n",
+       "36  1985   southeast      1    7            Notre Dame      South Bend, IN   \n",
+       "37  1985   southeast      1    2                   UNC      South Bend, IN   \n",
+       "38  1985   southeast      2    1              Michigan          Dayton, OH   \n",
+       "39  1985   southeast      2    5              Maryland          Dayton, OH   \n",
+       "40  1985   southeast      2   11                Auburn      South Bend, IN   \n",
+       "41  1985   southeast      2    7            Notre Dame      South Bend, IN   \n",
+       "42  1985   southeast      3    8             Villanova      Birmingham, AL   \n",
+       "43  1985   southeast      3   11                Auburn      Birmingham, AL   \n",
+       "44  1985   southeast      4    8             Villanova      Birmingham, AL   \n",
+       "45  1985        west      1    1       St. John's (NY)  Salt Lake City, UT   \n",
+       "46  1985        west      1    8                  Iowa  Salt Lake City, UT   \n",
+       "47  1985        west      1    5            Washington  Salt Lake City, UT   \n",
+       "48  1985        west      1    4                  UNLV  Salt Lake City, UT   \n",
+       "49  1985        west      1    6                 Tulsa     Albuquerque, NM   \n",
+       "50  1985        west      1    3  North Carolina State     Albuquerque, NM   \n",
+       "51  1985        west      1    7               Alabama     Albuquerque, NM   \n",
+       "52  1985        west      1    2                   VCU     Albuquerque, NM   \n",
+       "53  1985        west      2    1       St. John's (NY)  Salt Lake City, UT   \n",
+       "54  1985        west      2   12              Kentucky  Salt Lake City, UT   \n",
+       "55  1985        west      2   11                  UTEP     Albuquerque, NM   \n",
+       "56  1985        west      2    7               Alabama     Albuquerque, NM   \n",
+       "57  1985        west      3    1       St. John's (NY)          Denver, CO   \n",
+       "58  1985        west      3    3  North Carolina State          Denver, CO   \n",
+       "59  1985        west      4    1       St. John's (NY)          Denver, CO   \n",
+       "60  1985  final four      1    8             Villanova       Lexington, KY   \n",
+       "61  1985  final four      1    1       St. John's (NY)       Lexington, KY   \n",
+       "62  1985  final four      2    8             Villanova       Lexington, KY   \n",
        "\n",
        "   Oppenent Seed              Opponent Winning Seed  \n",
        "0             16                Lehigh            1  \n",
@@ -1703,9 +1705,7 @@
        "27             5        Louisiana Tech            1  \n",
        "28             2               Memphis            2  \n",
        "29             2               Memphis            2  \n",
-       "30            16   Fairleigh Dickinson            1  \n",
-       "31             9                Dayton            8  \n",
-       "32            12            Miami (OH)            5  \n",
+       "..           ...                   ...          ...  \n",
        "33            13                  Navy           13  \n",
        "34            11                Auburn           11  \n",
        "35            14                  Ohio            3  \n",
@@ -1732,10 +1732,15 @@
        "56             2                   VCU            7  \n",
        "57            12              Kentucky            1  \n",
        "58             7               Alabama            3  \n",
-       "59             3  North Carolina State            1  "
+       "59             3  North Carolina State            1  \n",
+       "60             2               Memphis            8  \n",
+       "61             1            Georgetown            1  \n",
+       "62             1            Georgetown            8  \n",
+       "\n",
+       "[63 rows x 9 columns]"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1747,11 +1752,12 @@
     "    region_tags = soup.find_all(\"div\", attrs={\"data-controls\": \"#brackets\"})[0].select('div a')   \n",
     "    bracket = []\n",
     "    for region_tag in region_tags:        \n",
-    "        region = str(region_tag.string).lower()\n",
-    "        #print(\"region \", region)\n",
-    "        #if region is not 'final four':            \n",
-    "        search = {'id': region}        \n",
-    "        region_div = soup.find('div',**search)\n",
+    "        region = str(region_tag.string).lower()                           \n",
+    "        if region == 'final four':\n",
+    "            region_div = soup.find('div', {'id':'national'})\n",
+    "        else:\n",
+    "            search = {'id': region} \n",
+    "            region_div = soup.find('div',**search)            \n",
     "        if region_div is not None:\n",
     "            bracket_rounds = region_div.div\n",
     "            div_rounds = bracket_rounds.find_all('div', {'class':'round'})                \n",
