--- a/ncaa_all_years.ipynb
+++ b/ncaa_all_years.ipynb
@@ -242,421 +242,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 229,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Year</th>\n",
-       "      <th>Team</th>\n",
-       "      <th>Opponent</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2017</td>\n",
-       "      <td>Florida</td>\n",
-       "      <td>ETSU</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>2017</td>\n",
-       "      <td>Miami (FL)</td>\n",
-       "      <td>Michigan State</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>49</th>\n",
-       "      <td>2017</td>\n",
-       "      <td>Florida State</td>\n",
-       "      <td>Florida Gulf Coast</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>59</th>\n",
-       "      <td>2016</td>\n",
-       "      <td>UNC</td>\n",
-       "      <td>Florida Gulf Coast</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>94</th>\n",
-       "      <td>2016</td>\n",
-       "      <td>Miami (FL)</td>\n",
-       "      <td>Buffalo</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>230</th>\n",
-       "      <td>2014</td>\n",
-       "      <td>Florida</td>\n",
-       "      <td>Albany (NY)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>255</th>\n",
-       "      <td>2013</td>\n",
-       "      <td>Miami (FL)</td>\n",
-       "      <td>Pacific</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>283</th>\n",
-       "      <td>2013</td>\n",
-       "      <td>Florida</td>\n",
-       "      <td>Northwestern State</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>285</th>\n",
-       "      <td>2013</td>\n",
-       "      <td>Georgetown</td>\n",
-       "      <td>Florida Gulf Coast</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>316</th>\n",
-       "      <td>2012</td>\n",
-       "      <td>Florida State</td>\n",
-       "      <td>St. Bonaventure</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>328</th>\n",
-       "      <td>2012</td>\n",
-       "      <td>Temple</td>\n",
-       "      <td>South Florida</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>362</th>\n",
-       "      <td>2012</td>\n",
-       "      <td>Florida</td>\n",
-       "      <td>Virginia</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>396</th>\n",
-       "      <td>2011</td>\n",
-       "      <td>Florida</td>\n",
-       "      <td>UCSB</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>410</th>\n",
-       "      <td>2011</td>\n",
-       "      <td>Texas A&amp;M;</td>\n",
-       "      <td>Florida State</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>483</th>\n",
-       "      <td>2010</td>\n",
-       "      <td>Gonzaga</td>\n",
-       "      <td>Florida State</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>488</th>\n",
-       "      <td>2010</td>\n",
-       "      <td>BYU</td>\n",
-       "      <td>Florida</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>517</th>\n",
-       "      <td>2009</td>\n",
-       "      <td>Florida State</td>\n",
-       "      <td>Wisconsin</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>599</th>\n",
-       "      <td>2008</td>\n",
-       "      <td>Miami (FL)</td>\n",
-       "      <td>Saint Mary's (CA)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>656</th>\n",
-       "      <td>2007</td>\n",
-       "      <td>Florida</td>\n",
-       "      <td>Jackson State</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>694</th>\n",
-       "      <td>2006</td>\n",
-       "      <td>Florida</td>\n",
-       "      <td>South Alabama</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>755</th>\n",
-       "      <td>2005</td>\n",
-       "      <td>Florida</td>\n",
-       "      <td>Ohio</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>759</th>\n",
-       "      <td>2005</td>\n",
-       "      <td>UConn</td>\n",
-       "      <td>UCF</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>855</th>\n",
-       "      <td>2003</td>\n",
-       "      <td>Florida</td>\n",
-       "      <td>Sam Houston State</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>928</th>\n",
-       "      <td>2002</td>\n",
-       "      <td>Florida</td>\n",
-       "      <td>Creighton</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>948</th>\n",
-       "      <td>2002</td>\n",
-       "      <td>Alabama</td>\n",
-       "      <td>Florida Atlantic</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>958</th>\n",
-       "      <td>2002</td>\n",
-       "      <td>Miami (FL)</td>\n",
-       "      <td>Missouri</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1009</th>\n",
-       "      <td>2001</td>\n",
-       "      <td>Florida</td>\n",
-       "      <td>Western Kentucky</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1039</th>\n",
-       "      <td>2000</td>\n",
-       "      <td>Florida</td>\n",
-       "      <td>Butler</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1071</th>\n",
-       "      <td>2000</td>\n",
-       "      <td>Miami (FL)</td>\n",
-       "      <td>Arkansas</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1100</th>\n",
-       "      <td>1999</td>\n",
-       "      <td>Duke</td>\n",
-       "      <td>Florida A&amp;M;</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1107</th>\n",
-       "      <td>1999</td>\n",
-       "      <td>Miami (FL)</td>\n",
-       "      <td>Lafayette</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1149</th>\n",
-       "      <td>1999</td>\n",
-       "      <td>Florida</td>\n",
-       "      <td>Penn</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1180</th>\n",
-       "      <td>1998</td>\n",
-       "      <td>Texas Christian</td>\n",
-       "      <td>Florida State</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1197</th>\n",
-       "      <td>1998</td>\n",
-       "      <td>UCLA</td>\n",
-       "      <td>Miami (FL)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1289</th>\n",
-       "      <td>1996</td>\n",
-       "      <td>UMass</td>\n",
-       "      <td>UCF</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1388</th>\n",
-       "      <td>1995</td>\n",
-       "      <td>Iowa State</td>\n",
-       "      <td>Florida</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1397</th>\n",
-       "      <td>1995</td>\n",
-       "      <td>UCLA</td>\n",
-       "      <td>Florida International</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1420</th>\n",
-       "      <td>1994</td>\n",
-       "      <td>Florida</td>\n",
-       "      <td>James Madison</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1445</th>\n",
-       "      <td>1994</td>\n",
-       "      <td>Purdue</td>\n",
-       "      <td>UCF</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1513</th>\n",
-       "      <td>1993</td>\n",
-       "      <td>Florida State</td>\n",
-       "      <td>Evansville</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1590</th>\n",
-       "      <td>1992</td>\n",
-       "      <td>Georgetown</td>\n",
-       "      <td>South Florida</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1591</th>\n",
-       "      <td>1992</td>\n",
-       "      <td>Florida State</td>\n",
-       "      <td>Montana</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1640</th>\n",
-       "      <td>1991</td>\n",
-       "      <td>Florida State</td>\n",
-       "      <td>USC</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1719</th>\n",
-       "      <td>1990</td>\n",
-       "      <td>Arizona</td>\n",
-       "      <td>South Florida</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1751</th>\n",
-       "      <td>1989</td>\n",
-       "      <td>Florida</td>\n",
-       "      <td>Colorado State</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1763</th>\n",
-       "      <td>1989</td>\n",
-       "      <td>Florida State</td>\n",
-       "      <td>Middle Tennessee</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1840</th>\n",
-       "      <td>1988</td>\n",
-       "      <td>Iowa</td>\n",
-       "      <td>Florida State</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1842</th>\n",
-       "      <td>1988</td>\n",
-       "      <td>Florida</td>\n",
-       "      <td>St. John's (NY)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1860</th>\n",
-       "      <td>1987</td>\n",
-       "      <td>Florida</td>\n",
-       "      <td>North Carolina State</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2244</th>\n",
-       "      <td>1980</td>\n",
-       "      <td>Florida State</td>\n",
-       "      <td>Toledo</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2326</th>\n",
-       "      <td>1978</td>\n",
-       "      <td>Kentucky</td>\n",
-       "      <td>Florida State</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2497</th>\n",
-       "      <td>1972</td>\n",
-       "      <td>Florida State</td>\n",
-       "      <td>Eastern Kentucky</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2593</th>\n",
-       "      <td>1968</td>\n",
-       "      <td>ETSU</td>\n",
-       "      <td>Florida State</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2775</th>\n",
-       "      <td>1960</td>\n",
-       "      <td>Western Kentucky</td>\n",
-       "      <td>Miami (FL)</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      Year              Team               Opponent\n",
-       "3     2017           Florida                   ETSU\n",
-       "16    2017        Miami (FL)         Michigan State\n",
-       "49    2017     Florida State     Florida Gulf Coast\n",
-       "59    2016               UNC     Florida Gulf Coast\n",
-       "94    2016        Miami (FL)                Buffalo\n",
-       "230   2014           Florida            Albany (NY)\n",
-       "255   2013        Miami (FL)                Pacific\n",
-       "283   2013           Florida     Northwestern State\n",
-       "285   2013        Georgetown     Florida Gulf Coast\n",
-       "316   2012     Florida State        St. Bonaventure\n",
-       "328   2012            Temple          South Florida\n",
-       "362   2012           Florida               Virginia\n",
-       "396   2011           Florida                   UCSB\n",
-       "410   2011        Texas A&M;          Florida State\n",
-       "483   2010           Gonzaga          Florida State\n",
-       "488   2010               BYU                Florida\n",
-       "517   2009     Florida State              Wisconsin\n",
-       "599   2008        Miami (FL)      Saint Mary's (CA)\n",
-       "656   2007           Florida          Jackson State\n",
-       "694   2006           Florida          South Alabama\n",
-       "755   2005           Florida                   Ohio\n",
-       "759   2005             UConn                    UCF\n",
-       "855   2003           Florida      Sam Houston State\n",
-       "928   2002           Florida              Creighton\n",
-       "948   2002           Alabama       Florida Atlantic\n",
-       "958   2002        Miami (FL)               Missouri\n",
-       "1009  2001           Florida       Western Kentucky\n",
-       "1039  2000           Florida                 Butler\n",
-       "1071  2000        Miami (FL)               Arkansas\n",
-       "1100  1999              Duke           Florida A&M;\n",
-       "1107  1999        Miami (FL)              Lafayette\n",
-       "1149  1999           Florida                   Penn\n",
-       "1180  1998   Texas Christian          Florida State\n",
-       "1197  1998              UCLA             Miami (FL)\n",
-       "1289  1996             UMass                    UCF\n",
-       "1388  1995        Iowa State                Florida\n",
-       "1397  1995              UCLA  Florida International\n",
-       "1420  1994           Florida          James Madison\n",
-       "1445  1994            Purdue                    UCF\n",
-       "1513  1993     Florida State             Evansville\n",
-       "1590  1992        Georgetown          South Florida\n",
-       "1591  1992     Florida State                Montana\n",
-       "1640  1991     Florida State                    USC\n",
-       "1719  1990           Arizona          South Florida\n",
-       "1751  1989           Florida         Colorado State\n",
-       "1763  1989     Florida State       Middle Tennessee\n",
-       "1840  1988              Iowa          Florida State\n",
-       "1842  1988           Florida        St. John's (NY)\n",
-       "1860  1987           Florida   North Carolina State\n",
-       "2244  1980     Florida State                 Toledo\n",
-       "2326  1978          Kentucky          Florida State\n",
-       "2497  1972     Florida State       Eastern Kentucky\n",
-       "2593  1968              ETSU          Florida State\n",
-       "2775  1960  Western Kentucky             Miami (FL)"
-      ]
-     },
-     "execution_count": 189,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "fl_teams_by_year = df1_teams_year[df1_teams_year.Team.isin(fl_list)|df1_teams_year.Opponent.isin(fl_list)] \n",
-    "fl_teams_by_year"
+    "fl_teams_by_year\n",
+    "fl_teams_by_year.to_csv('fl_teams_by_year.csv')"
    ]
   },
   {
@@ -875,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 228,
    "metadata": {
     "collapsed": false
    },
@@ -1009,8 +605,7 @@
     }
    ],
    "source": [
-    "#df1_teams_fl_agg\n",
-    "#sorted(df1_teams_fl_agg, key=lambda l:l[0], reverse=True, inplace=True)\n",
+    "\n",
     "df1_teams_fl_agg2 = df1_teams_fl_agg.groupby('Year')\n",
     "for year, fl_group in df1_teams_fl_agg2:\n",
     "    print(fl_group.to_string(index=False))\n",
