--- a/ncaa_all_years.ipynb
+++ b/ncaa_all_years.ipynb
@@ -10,7 +10,7 @@
     "\n",
     "http://www.local10.com/sports/college-basketball/miami-florida-florida-state-all-heading-to-big-dance\n",
     "\n",
-    "but four Florida teaams made the tournament including Florida Gulf Coast.  So is that the full story?  Have there been other years where three or more Florida teams made the tournament?  If so what were they?  Which Florida teams have the most appearances to the tournament?"
+    "but four Florida teams made the tournament this year including Florida Gulf Coast.  So is that the full story?  Have there been other years where three or more Florida teams made the tournament?  If so when and who were they?  Which Florida teams have the most appearances in the tournament?  "
    ]
   },
   {
