--- a/ncaa_all_years.ipynb
+++ b/ncaa_all_years.ipynb
@@ -717,7 +717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -837,13 +837,15 @@
        "1103  1999         Florida A&M"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df1_teams_fl_agg[df1_teams_fl_agg.Year.isin(fl_three_or_more.index)].sort_values(by=['Year'], ascending=False)\n"
+    "fl_three_or_more_detail_df = df1_teams_fl_agg[df1_teams_fl_agg.Year.isin(fl_three_or_more.index)].sort_values(by=['Year'], ascending=False)\n",
+    "fl_three_or_more_detail_df.to_csv(\"fl_three_or_more_detail.csv\")\n",
+    "fl_three_or_more_detail_df"
    ]
   },
   {
